--- a/ChatWindow/ChatWindow.csproj
+++ b/ChatWindow/ChatWindow.csproj
@@ -7,4 +7,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Google.Apis.Drive.v3" Version="1.57.0.2789" />
+    </ItemGroup>
+
 </Project>
